# tinyconfig

./: CMakeLists.txt  README.md
include/: tinyconfig.h
src/: tinyconfig.c
test/: CMakeLists.txt  main.c
